<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:gravity="center">

    <ImageView
        android:id="@+id/Xclimber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_cancelar"
        android:layout_marginTop="2dp"
        android:layout_marginRight="7dp"
        android:elevation="3dp"
        android:layout_alignParentRight="true"
        android:background="@color/colorPrimaryDark"

        />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:layout_marginTop="25dp"
                android:background="@color/blanco"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tituloCmb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/climber"
                    android:textAlignment="center"
                    android:textColor="@color/blanco"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    android:background="@color/colorPrimaryDark"/>

                <ImageView
                    android:id="@+id/GifClimber"
                    android:layout_marginTop="12sp"
                    android:layout_gravity="center"
                    android:layout_width="140sp"
                    android:layout_height="140sp"
                    android:background="@android:color/background_dark"
                    />
                <TextView
                    android:id="@+id/mensajeCmb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8sp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/txt_climber"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal"
                    >
                    <Button
                        android:id="@+id/btnCmb1"
                        android:layout_width="120sp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="40sp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="20sp"
                        android:background="@drawable/aceptar"
                        android:text="@string/app_realizar"
                        android:textColor="@color/blanco" />
                    <Button
                        android:id="@+id/btnCmb2"
                        android:layout_width="120sp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="20sp"
                        android:background="@drawable/cancelar"
                        android:text="@string/app_cancelar"
                        android:textColor="@color/blanco" />



                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
